--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
     "recharts": "^2.7.2",
     "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
@@ -44,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy":"http://localhost:1471/api"
+  },
+  "proxy": "http://localhost:1471/api"
 }
